# SEN66-IAQ-Monitor

./: .cursorrules  .gitignore  README.md  notes.md  platformio.ini
3D Models/: SEN6x IAQ Bottom Shell 1_2mm.step  SEN6x IAQ Bottom Shell 1_6mm.step  SEN6x IAQ Buttons.step  SEN6x IAQ Logo.step  SEN6x IAQ Top Shell with Logo.step  SEN6x IAQ Top Shell without Logo.step  SEN6x IAQ Top Shell without insert with Logo.step  (+1 more)
Temperature Parameter Tuning/: serial_to_edf.py
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_CO2Screen.c  ui_FRCScreen.c  ui_MainScreen.c  ui_NOxScreen.c  ui_PMScreen.c  ui_RHScreen.c  ui_Screen2.c  ui_SettingsScreen.c  ui_TempScreen.c  ui_VOCScreen.c  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_tile.c  ui_comp_tile.h  ui_events.h  ui_font_Arial_Black_18.c  ui_font_Arial_Black_22.c  ui_font_Arial_Bold_13.c  ui_helpers.c  ui_helpers.h  ui_img_238700877.c  ui_img_417669948.c  ui_img_510121354.c  ui_img_718623388.c  ui_img_741524973.c  ui_img_cog_png.c  ui_img_droplets_png.c  ui_img_droplets_white_png.c  ui_img_grip_png.c  ui_img_pmscreen_png.c  ui_img_sensirion_logo_rgb_green_small_png.c  ui_img_thermometer_png.c  ui_img_thermometer_white_png.c  ui_img_wind_png.c  (+3 more)
src/ui_Settings/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_AltitudeScreen.c  ui_BrightnessScreen.c  ui_ChartTimeScreen.c  ui_FRCScreen.c  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_tile.c  ui_comp_tile.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1346862293.c  ui_img_718623388.c  ui_img_810620936.c  ui_img_816914973.c  ui_img_blank_png.c  ui_themes.cpp  ui_themes.h
(+34 files in other folders)
